--- a/index.html
+++ b/index.html
@@ -14,11 +14,13 @@
           <div class="lights"></div>
           <div class="trunk"></div>
         </div>
-        <button id="toggleLightsBtn" class="toggle-lights-btn">Apagar Luces</button>
+        <button id="fireworksButton" class="toggle-lights-btn">🎆 Lanzar Fuegos Artificiales</button>
         <div class="snow"></div>
         <div class="countdown"></div>
+        <button id="toggleLightsBtn" class="toggle-lights-btn">Apagar Luces</button>
       </div>
       
+
       <div class="footer">
         <footer>
           <p>By superJonnathan</p>
