--- a/index.html
+++ b/index.html
@@ -1,31 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="index.css">
-</head>
-<body>
-    <div class="container">
-      <h1 class="message">M5A te desea una Feliz Navidad 🎅🎄</h1>
-        <div class="tree">
-          <div class="star"></div>
-          <div class="lights"></div>
-          <div class="trunk"></div>
-        </div>
-        <button id="fireworksButton" class="toggle-lights-btn">🎆 Lanzar Fuegos Artificiales</button>
-        <div class="snow"></div>
-        <div class="countdown"></div>
-        <button id="toggleLightsBtn" class="toggle-lights-btn">Apagar Luces</button>
-      </div>
-      
 
-      <div class="footer">
-        <footer>
-          <p>By superJonnathan</p>
-        </footer>
-      </div>
-      <script src="index.js"></script>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+  <link rel="stylesheet" href="index.css">
+</head>
+
+<body>
+  <div class="container">
+    <h1 class="message">M5A te desea una Feliz Navidad 🎅🎄</h1>
+    <div class="tree">
+      <div class="star"></div>
+      <div class="layer"></div>
+      <div class="lights"></div>
+      <div class="trunk"></div>
+    </div>
+    <button id="fireworksButton" class="toggle-lights-btn">🎆 Lanzar Fuegos Artificiales</button>
+    <div class="snow"></div>
+    <div class="countdown"></div>
+    <button id="toggleLightsBtn" class="toggle-lights-btn">Apagar Luces</button>
+  </div>
+
+
+  <div class="footer">
+    <footer>
+      <p>By superJonnathan</p>
+    </footer>
+  </div>
+  <script src="index.js"></script>
 </body>
+
 </html>
